# 0,1,0,20210319
	'6' open float geometry node editor (Replacement for PFSurce shortcut) (3DsMax mode).
	'bpy.ops.editor.float' Updated to work in Blender 2.93 and improved ('M', '8', 'F11' in 3DsMax mode).

# 0,1,0,20210317
	'Align Object' works for objects with Constriants.
	'Set start/end frame' (Right Click Menu time line and Sequencer).
	'Join plus' Ask for apply befor join 'Ctrl + j' (Blender & 3DsMax Mode).

# 0,1,0,20210310
	Render preset Save/Load and Copy/Paste operator added (Render Properties/ Presets)

# 0,1,0,20210221
	"Overridelibrary" Driver Issue fixer applying for the whole scene automatically (Tools/Animation/Fix Override Driver Issue)

# 0,1,0,20210219
	Solve the Library override broken shapekey drivers (Tools/Animation/Fix Override Driver Issue).

# 0,1,0,20210216
	Select by Length and Segment Count added to Select Menu in Curve Edit mode.
	'W','E','R' issue with snap fixed.

# 0,1,0,20210207
	Multi target shapekey (driving multiple shapekeys automatically) added under shapekey panel.
	Very simple tool for quick rename objects data name same as object name (for now search 'Data Rename' operator).

# 0,1,0,20210131
	'Align object' issue with new merged object fixed.
	Quadmenu 'Weld' option is works now (as a temprary solution).

# 0,1,0,20210128
	The issue of last update ('W,E,R' and snap) fixed.

# 0,1,0,20210127
	Camera Target seprated from FOV Target.
	Camera Target tools puted on 'Properties > Object Data (Camera) > Target/Tools' panel.
	'Blender Transform Type' added to Options make 'W,E,R' Keys work like Blender 'G,R'S' Keys (Need to restart blender on change)

# 0,1,0,20210124
	'TWEAK MMB + Shift' Align view (Replacement of 'TWEAK MMB + Alt' in Blender Default for 3DsMax Mode).
	Zoom mode setting to Horizontal mode when Maya navigation active.
	Joystick connector remove old driver if exist.
	Camera target control the F-Stop of Depth of Field too.

# 0,1,0,20210122
	'Hair guides from/to curve' added to View3D:Tools/Particle Menu.